<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/appIcon"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_tally" />

            <TextView
                android:id="@+id/billAmountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/bill_amount_info_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/billAmountText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bill_amount_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tipOptionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/tip_option_text"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tipOptionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_amount_info_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/splitBillTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/split_bill_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/splitBillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split_bill_info_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/splitAmountTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/split_amount_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/splitAmouintText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/split_amount_info_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/totalBillTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/total_bill_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalBillText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_bill_info_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@color/colorPrimary" />

            <TextView
                android:id="@+id/howToUseApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/how_to_use_text"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
