<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/split_bill_dialog_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/split_bill_dialog_text"
        android:textSize="16sp" />

    <CheckBox
        android:id="@+id/checkBoxDontShowAgain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/do_not_show_again_dialog_text" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:text="@string/button_text_ok"
        android:textColor="@color/colorAccent"
        android:textSize="14sp" />
</LinearLayout>
