<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top|center"
        android:text="@string/percentage_dialog_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <NumberPicker
        android:id="@+id/dialogPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/buttonPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@color/transparent"
            android:text="@string/button_text_cancel"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <Button
            android:id="@+id/setButton"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:background="@color/transparent"
            android:text="@string/button_text_set"
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>
