<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_main" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent2"
            android:contentDescription="@string/text_msg_bill"
            android:focusable="true"
            android:visibility="invisible"
            app:layout_anchor="@id/fab_email"
            app:layout_constraintBottom_toTopOf="@+id/fab_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_text_msg" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/colorAccent2"
            android:contentDescription="@string/email_bill"
            android:focusable="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/fab_share"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_email" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/share_bill"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>